--- a/signup.html
+++ b/signup.html
@@ -14,13 +14,18 @@
     <div class="container">
         <form>
             <h1>Sign Up</h1>
-            <input type="text" placeholder="Name" />
-            <input type="text" placeholder="Father's Name" />
-            <input type="text" placeholder="Surname" />
-            <input type="email" placeholder="Email" />
-            <input type="otp" placeholder="Enter OTP" />
-            <input type="password" placeholder="Password" />
-            <input type="password" placeholder="Re-enter your password" />
+            <label class="fieldlabels">Email</label>
+            <input type="email" name="email" placeholder="Email Id" />
+            <label class="fieldlabels">Name</label>
+            <input type="text" name="name" placeholder="First Name" />
+            <label class="fieldlabels">Father's Name</label>
+            <input type="text" name="fname" placeholder="Father's Name" />
+            <label class="fieldlabels">Surname</label>
+            <input type="text" name="sname" placeholder="Surname" />
+            <label class="fieldlabels">Password</label>
+            <input type="password" name="pwd" placeholder="Password" />
+            <label class="fieldlabels">Confirm Password</label>
+            <input type="password" name="cpwd" placeholder="Confirm Password" />
             <button>Sign Up</button>
         </form>
 
